# Chat_app

./: Cargo.toml  README.md
src/: main.rs
src/web/: routes.rs  socket.rs
src/web/templates/: index.html
