[package]
name = "chat_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
dotenv = { version = "0.15.0" }
env_logger = { version = "0.10.0" }
log = { version = "0.4.20" }
futures = "0.3"
